// Vitest Snapshot v1

exports[`Collapse > Collapse baseVue demo works fine 1`] = `
<div
  class="tdesign-collapse"
>
  <t-collapse
    default-value="1"
  >
    <t-collapse-panel
      header="这是一个折叠标题"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      destroy-on-collapse=""
      header="设置默认展开项"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      header="自定义折叠面板内容"
    >
      <div
        class="tdesign-demo-block-column"
        style="width: 80%;"
      >
        <t-tag-input
          clearable=""
        />
        <t-tag-input
          clearable=""
          label="Controlled: "
          value="Vue,React"
        />
        <t-tag-input
          clearable=""
          default-value="Vue,React"
          label="UnControlled: "
        />
      </div>
    </t-collapse-panel>
    <t-collapse-panel
      header="嵌套折叠面板"
    >
      <t-collapse
        default-expand-all=""
      >
        <t-collapse-panel
          header="子面板1"
        >
           这是子面板1 
        </t-collapse-panel>
        <t-collapse-panel
          header="子面板2"
        >
           这是子面板2 
        </t-collapse-panel>
        <t-collapse-panel
          header="子面板3"
        >
           这是子面板3 
        </t-collapse-panel>
        <t-collapse-panel
          header="子面板4"
        >
           这是子面板4 
        </t-collapse-panel>
      </t-collapse>
    </t-collapse-panel>
  </t-collapse>
  <div
    style="margin-top: 10px;"
  >
    当前展开项:[
  1
]
  </div>
</div>
`;

exports[`Collapse > Collapse iconVue demo works fine 1`] = `
<div
  class="tdesign-collapse"
>
  <t-collapse
    expand-icon="true"
    expand-icon-placement="left"
    expand-on-row-click="true"
  >
    <t-collapse-panel
      header="这是一个折叠标题"
      value="0"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      value="1"
    />
    <t-collapse-panel
      value="2"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      header="这是一个折叠标题"
      value="3"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
  </t-collapse>
  <div
    class="button-area"
  >
    <t-checkbox>
      显示箭头
    </t-checkbox>
    <t-radio-group>
      <t-radio
        value="left"
      >
        左边
      </t-radio>
      <t-radio
        value="right"
      >
        右边
      </t-radio>
    </t-radio-group>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <t-checkbox>
      仅图标响应点击
    </t-checkbox>
  </div>
</div>
`;

exports[`Collapse > Collapse mutexVue demo works fine 1`] = `
<div
  class="tdesign-collapse"
>
  <t-collapse
    expand-mutex=""
  >
    <t-collapse-panel
      header="这是一个折叠标题"
      value="0"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      value="1"
    />
    <t-collapse-panel
      value="2"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      header="这是一个折叠标题"
      value="3"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
  </t-collapse>
  <div
    style="margin-top: 10px;"
  >
    当前展开项：[]
  </div>
</div>
`;

exports[`Collapse > Collapse otherVue demo works fine 1`] = `
<div
  class="tdesign-collapse"
>
  <t-collapse>
    <t-collapse-panel
      header="这是一个折叠标题"
      value="0"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      value="1"
    />
    <t-collapse-panel
      value="2"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      header="这是一个折叠标题"
      value="3"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
  </t-collapse>
  <div
    class="button-area"
  >
    <t-checkbox>
      全部禁用
    </t-checkbox>
    <t-checkbox>
      无边框模式
    </t-checkbox>
  </div>
</div>
`;

exports[`Collapse > Collapse rightSlotVue demo works fine 1`] = `
<div
  class="tdesign-collapse"
>
  <t-collapse>
    <t-collapse-panel
      header="这是一个折叠标题可以设置右侧操作区域"
      value="0"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      disabled="true"
      header="这是一个折叠标题可以设置右侧操作区域"
      value="1"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      header="这是一个折叠标题可以设置右侧操作区域"
      value="2"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
    <t-collapse-panel
      disabled="true"
      header="这是一个折叠标题可以设置右侧操作区域"
      value="3"
    >
       这部分是每个折叠面板折叠或展开的内容，可根据不同业务或用户的使用诉求，进行自定义填充。可以是纯文本、图文、子列表等内容形式。 
    </t-collapse-panel>
  </t-collapse>
</div>
`;
